# goph-419-f2023-lab02-stMD

./: README.md  midterm.py  pyproject.toml
examples/: FULLMK.txt  MKCO2.txt  driver.py  midterm.py
src/goph419lab02/: linalg_interp.py
tests/: tests.py
